COMPLETE MVC App Assignment Part 10:
StudentMVC

HomeController.cs
- UPDATE Instructors method with Instructors list

Instructors.cshtml
- ADD Display Instructors list passed in from controller

--- a/StudentMVC/StudentMVC/Views/Home/Instructor.cshtml
+++ b/StudentMVC/StudentMVC/Views/Home/Instructor.cshtml
@@ -5,9 +5,9 @@
 <!-- MODULE 11: Creating MVC Applications -->
 <!-- AUTHOR: Steven Partlow -->
 <!-- DATE: 26/02/2023 -->
-
 <!-- INSTRUCTOR VIEW -->
 
+@model StudentMVC.Models.Instructor
 
 @{
     ViewBag.Title = "Instructor";
@@ -18,4 +18,20 @@
 <h5>
     Details for Instructor with ID: @ViewBag.Id <!-- Retrieve value of Id key stored in ViewBag dictionary -->
 </h5>
+
+<p>
+    Further details about the Instructor:
+</p>
+
+<ul>
+    <li>
+        Another Id: @Model.Id
+    </li>
+    <li>
+        First Name: @Model.FirstName
+    </li>
+    <li>
+        Last Name: @Model.LastName
+    </li>
+</ul>
 
