--- a/StudentMVC/StudentMVC/Views/Home/Instructors.cshtml
+++ b/StudentMVC/StudentMVC/Views/Home/Instructors.cshtml
@@ -6,9 +6,19 @@
 <!-- AUTHOR: Steven Partlow -->
 <!-- DATE: 25/02/2023 -->
 
+@using StudentMVC.Models
+@model List<Instructor>
+
 @{
     ViewBag.Title = "Instructors";
 }
 
 <h2>Instructors</h2>
+
+@{ 
+    foreach(Instructor instructor in Model)
+            {
+                <h4>@instructor.FirstName</h4>
+            }
+}
 
