--- a/NewsletterAppMVC/NewsletterAppMVC/Views/Shared/_Layout.cshtml
+++ b/NewsletterAppMVC/NewsletterAppMVC/Views/Shared/_Layout.cshtml
@@ -1,18 +1,27 @@
 ﻿<!-- Advanced Software and Web Developer Diploma -->
 <!-- Part X: C# and .NET Framework - Part 2 -->
 <!-- by Pitman Training / The Tech Academy -->
+
 <!-- MODULE 11: Creating MVC Applications -->
 <!-- AUTHOR: Steven Partlow -->
 <!-- DATE: 27/02/2023 -->
 
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter</title>
+    @Styles.Render("~/Content/css")
 </head>
+
 <body>
     @RenderBody()
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
+
 </html>
