COMPLETE MVC Sample Application Part 4:
NewsletterAppMVC

HomeController.cs
- ADD SignUp method to take in the three inputs from the web form

--- a/NewsletterAppMVC/NewsletterAppMVC/Views/Home/Index.cshtml
+++ b/NewsletterAppMVC/NewsletterAppMVC/Views/Home/Index.cshtml
@@ -27,17 +27,17 @@
                 <div class="row no-gutters"> <!-- Use a row with no margins on either side -->
                 
                     <!-- FIRST NAME INPUT BOX -->
-                    <div class="form-group col-md-12"> <!-- Use form-group and make input 12 columns in width -->
+                    <div class="form-group col-md-12 p-2"> <!-- Use form-group and make input 12 columns in width -->
                         <input name="FirstName" type="text" class="form-control" placeholder="First Name" />
                     </div> <!-- END DIV FIRST NAME INPUT-->
 
                     <!-- LAST NAME INPUT BOX -->
-                    <div class="form-group col-md-12"> <!-- Use form-group and make input 12 columns in width -->
+                    <div class="form-group col-md-12 p-2"> <!-- Use form-group and make input 12 columns in width -->
                         <input name="LastName" type="text" class="form-control" placeholder="Last Name" />
                     </div> <!-- END DIV LAST NAME INPUT-->
 
                     <!-- EMAIL ADDRESS INPUT BOX -->
-                    <div class="form-group col-md-12"> <!-- Use form-group and make input 12 columns in width -->
+                    <div class="form-group col-md-12 p-2"> <!-- Use form-group and make input 12 columns in width -->
                         <input name="EmailAddress" type="email" class="form-control" placeholder="Email Address" />
                     </div> <!-- END DIV EMAIL ADDRESS INPUT-->
 
