COMPLETE MVC Sample Application Part 10
NewsletterAppMVC

- ADD ViewModels folder to the solution
- ADD ViewModels / SignupVm.cs view model added

SignupVm.cs
- ADD three properties FirstName, LastName and EmailAddress

HomeController.cs
- UPDATE Admin() to read in social security number
- ADD Iterate through database only matching up the three specific fields we need, then passing this list to the view

Readme.md
- UPDATE Tutorial description

--- a/NewsletterAppMVC/NewsletterAppMVC/Views/Home/Admin.cshtml
+++ b/NewsletterAppMVC/NewsletterAppMVC/Views/Home/Admin.cshtml
@@ -6,8 +6,8 @@
 <!-- AUTHOR: Steven Partlow -->
 <!-- DATE: 01/03/2023 -->
 
-@using NewsletterAppMVC.Models <!-- Use the models defined in our Models folder -->
-@model List<NewsletterSignUp> /* Create a list of the NewsletterSignUp class */
+@using NewsletterAppMVC.ViewModels <!-- Use the models defined in our Models folder -->
+@model List<SignupVm> /* Create a list of the NewsletterSignUp class */
                               
 <div class="row no-gutters m-3"> <!-- Create a row with no margin on either side and 3em margin at the top and bottom -->
 
