--- a/CarInsurance/CarInsurance/Views/Insuree/Create.cshtml
+++ b/CarInsurance/CarInsurance/Views/Insuree/Create.cshtml
@@ -1,4 +1,12 @@
-﻿@model CarInsurance.Models.Insuree
+﻿<!-- Advanced Software and Web Developer Diploma -->
+<!-- Part X: C# and .NET Framework - Part 2 -->
+<!-- by Pitman Training / The Tech Academy -->
+
+<!-- MODULE 12: ASP.NET MVC Entity Framework Assignment -->
+<!-- AUTHOR: Steven Partlow -->
+<!-- DATE: 08/03/2023 -->
+
+@model CarInsurance.Models.Insuree
 
 @{
     ViewBag.Title = "Create";
@@ -7,10 +15,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Insuree</h4>
         <hr />
