COMPLETE ASP.NET MVC ENTITY FRAMEWORK APPLICATION Part 4:
CarInsurance:
- RENAME AllQuote View Model to QuotesVm
- ADD AdminController.cs

AdminController.cs:
- UPDATE Index() method

Views\Admin:

Index.cshtml:
- ADD Display content of QuotesVm View model in the admin view

--- a/NewsletterAppMVC/NewsletterAppMVC/Views/Admin/Index.cshtml
+++ b/NewsletterAppMVC/NewsletterAppMVC/Views/Admin/Index.cshtml
@@ -51,13 +51,13 @@
                             </button> <!-- END BUTTON Unsubscribe -->
                         </div> <!-- END DIV Unsubscribe -->
 
-                    </div> <!-- END DIVE SignUp Row -->
+                    </div> <!-- END DIV SignUp Row -->
                 }
 
             }
 
         </div> <!-- END DIV Card Body -->
 
-    </div> <!-- END DIVE Card -->
+    </div> <!-- END DIV Card -->
 
-</div> <!-- END DIVE Row-->
+</div> <!-- END DIV Row-->
