COMPLETE ASP.NET MVC Entity Framework Assignment Part 4:
CarInsurance:
- ADD Success View to home views which display upon user successfully generating a quote

Site.css:
- ADD Further styling to the Admin view

Readme.md:
- ADD Add assignment description

--- a/CarInsurance/CarInsurance/Content/Site.css
+++ b/CarInsurance/CarInsurance/Content/Site.css
@@ -1,4 +1,15 @@
-﻿body {
+﻿/*  Advanced Software and Web Developer Diploma
+    Part X: C# and .NET Framework - Part 2
+    by Pitman Training / The Tech Academy
+
+    MODULE 12: ASP.NET MVC Entity Framework Assignment
+    AUTHOR: Steven Partlow
+    DATE: 13/03/2023
+
+    CSS Styling
+*/
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -25,61 +36,76 @@ textarea {
 
 /* CUSTOM CSS STYLING */
 
-th {
-    color: white;
-    background-color: dodgerblue;
+/* INSUREE INDEX VIEW */
+
+th { /* EFFECTS STYLING FOR TABLE HEADING */
+    color: white; /* Set text colour to white */
+    background-color: dodgerblue; /* Set the background colour to doger blue */
 }
 
-td {
-    font-weight: 700;
-    background-color: lightgrey;
+td { /* EFFECTS STYLING FOR TABLE DATA */
+    font-weight: 700; /* Bold the text */
+    background-color: lightgrey; /* Set the background colour to lightgrey */
 }
 
 /* CREATE VIEW STYLING */
 
-.form-horizontal {
-    border: 3px solid black;
-    padding-left: 5px;
-    box-shadow: 2px 2px grey;
+.form-horizontal { /* Styling for the main form */
+    border: 3px solid black; /* Give the form a 3 pixel solid black border */
+    padding-left: 5px; /* Add 5 pixels of padding to the left of the form */
+    box-shadow: 2px 2px grey; /* Give form a slight grey box shadow */
 }
 
-.control-label {
-    color: dodgerblue;
-    text-shadow: 1px 1px black;
+.control-label { /* Styling for the form labels */
+    color: dodgerblue; /* Make the label text doger blue */
+    text-shadow: 1px 1px black; /* Give the label text a slight black shadow effect */
 }
 
-.form-control {
-    box-shadow: 1px 1px black;
+.form-control { /* Styling for the form input boxes */
+    box-shadow: 1px 1px black; /*Give each input box a slight black shadow effect */
+}
+
+.btn { /*Styling for application buttons */
+    box-shadow: 1px 1px black; /* Give buttons a slight shadow effect */
+    font-weight: 700; /* Bold the button text */
 }
 
 /* ADMIN VIEW STYLING */
 
-.adminview {
-    background-color: ghostwhite;
+.adminview { /* Main page styling */
+    background-color: ghostwhite; /* Set the admin view page background to ghostwhite */
 }
 
-.admincard {
-    border: 3px solid black;
-    box-shadow: 2px 2px grey;
-    margin-bottom: 4px;
+.admincard { /* Styling for the individual cards that appear in the admin view */
+    background-color: lightyellow; /* Set each cards background colour to lightyellow */
+    border: 2px solid black; /* Give each card a solid black 2px border */
+    border-radius: 10px; /* Curve the edges of the border slightly */
+    box-shadow: 3px 3px grey; /* Give each card a grey shadow effect */
+    margin-bottom: 4px; /* Place a 4 pixel margin at the bottom of each card */
 }
 
-.adminview h1, h3 {
-    text-shadow: 1px 1px black;
+.adminview h1, h3 { /* Styling for h1 and h3 tags in the admin view */
+    text-shadow: 1px 1px black; /* Give h tags a slight black shadow effect */
 }
 
-.adminview h3 {
-    border: 2px solid black;
+.adminview h3 { /* Styling for headers of each admin view card */
+    border: 2px solid black; /* Give each card header a 2px solid black border */
+    padding-left: 3px; /* add a little padding to each card header on the left */
+    box-shadow: 2px 2px black; /* Give the header text a black shadow effect */
 }
 
-dl {
-    
+.card-body { /* Styling for the body of each admin card */
+    margin-left: 15px; /* Place a 15 pixel margin on the left of the card */
+    margin-right: 15px; /* Place a 15 pixel margin on the right of the card */
 }
 
-dt {
-    text-shadow: 1px 1px grey;    
+dl { /* Styling for the list of insuree data in each card */
+    background-color: lightblue; /* Set the background colour to lightblue */
+    margin-left: 3px; /* Add a 3 pixel margin to the left of each card */
+    border: solid 1px black; /* Give the card a black border */
+    box-shadow: 2px 2px black; /* Give the card a black box shadow effect */
 }
 
-dd {
-
+dt { /* Styling for the admin view box text labels */
+    text-shadow: 1px 1px grey; /* Give the labels a shadow effect */
 }
