--- a/CarInsurance/CarInsurance/Views/Home/Index.cshtml
+++ b/CarInsurance/CarInsurance/Views/Home/Index.cshtml
@@ -13,9 +13,13 @@
 }
 
 <div class="jumbotron">
-    <h1>TA CAR INSURANCE</h1>
+
+    <!-- MAIN LANDING PAGE HEADER -->
+
+    <h1>TA CAR INSURANCE</h1> <!-- MAIN PAGE HEADER TEXT -->
     <p class="lead">Get your car insurance quote from us today!</p>
-    <a href='@Url.Action("Create", "Insuree")'>
+    <a href='@Url.Action("Create", "Insuree")'> <!-- Click on this button to execute the Create() method within the Insuree controller -->
         <input type='button' value='Get Your Quote!' class="btn btn-primary btn-lg">
     </a>
-</div>
+
+</div> <!-- End DIV Jumbotron -->
